zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__new_pane_in_auto_layout-6.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 5099
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────────────────────────────────────────┐┌ Pane #2 ─────────────────────────────────────────────────┐
01 (C): │                                                           ││                                                          │
02 (C): │                                                           ││                                                          │
03 (C): │                                                           ││                                                          │
04 (C): │                                                           │└──────────────────────────────────────────────────────────┘
05 (C): │                                                           │┌ Pane #3 ─────────────────────────────────────────────────┐
06 (C): └───────────────────────────────────────────────────────────┘│                                                          │
07 (C): ┌ Pane #6 ──────────────────────────────────────────────────┐│                                                          │
08 (C): │                                                           ││                                                          │
09 (C): │                                                           │└──────────────────────────────────────────────────────────┘
10 (C): │                                                           │┌ Pane #4 ─────────────────────────────────────────────────┐
11 (C): │                                                           ││                                                          │
12 (C): │                                                           ││                                                          │
13 (C): └───────────────────────────────────────────────────────────┘│                                                          │
14 (C): ┌ Pane #7 ──────────────────────────────────────────────────┐└──────────────────────────────────────────────────────────┘
15 (C): │                                                           │┌ Pane #5 ─────────────────────────────────────────────────┐
16 (C): │                                                           ││                                                          │
17 (C): │                                                           ││                                                          │
18 (C): │                                                           ││                                                          │
19 (C): └───────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘

